# vars-tool

./: .README.md.swp  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: apirefs.rst  conf.py  index.rst  install.rst  overview.rst  pep8errors.txt  requirements.txt  tutorials.rst
docs/_build/doctrees/: apirefs.doctree  environment.pickle  index.doctree  install.doctree  overview.doctree  tutorials.doctree
docs/_build/doctrees/source/: modules.doctree  varstool.doctree  varstool.funcs.banff.doctree  varstool.funcs.doctree  varstool.funcs.oldman.doctree  varstool.plot.doctree  varstool.sa.doctree  varstool.sampling.doctree  varstool.util.doctree
docs/_build/html/: .buildinfo  apirefs.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/source/: modules.rst  varstool.example_models.rst  varstool.funcs.rst  varstool.plot.rst  varstool.rst  varstool.sa.rst  varstool.sampling.rst  varstool.sensitivity_analysis.rst  varstool.util.rst
general_tutorials/: GVARS-Tutorial.ipynb  QuickStart-Tutorial.ipynb  TSVARS-Tutorial.ipynb
general_tutorials/.ipynb_checkpoints/: QuickStart-Tutorial-checkpoint.ipynb  TSVARS-Tutorial-checkpoint.ipynb  star_points_results-checkpoint
hbv_tutorials/: 3 - Time-Varying and Time-Aggregate SA.ipynb  4 - SA with with correlated inputs.ipynb  6__HBV-SASK__Sensitivity Analysis.ipynb  7__HBV-SASK__Sensitivity Analysis_Time Varying.ipynb  8__HBV-SASK__Sensitivity Analysis_correlated_paramters.ipynb  9__HBV-SASK__Sensitivity Analysis_correlated_paramters-Ishigami.ipynb
hbv_tutorials/.ipynb_checkpoints/: 6__HBV-SASK__Sensitivity Analysis-checkpoint.ipynb  8__HBV-SASK__Sensitivity Analysis_correlated_paramters-checkpoint.ipynb
hbv_tutorials/Banff Basin/: monthly_data.inp  streamflow.inp
hbv_tutorials/Oldman Basin/: par_bounds.inp  pars.inp  streamflow.inp
paper/: grl61290-sup-0001-2020gl089829-si.docx
src/: Tutorial.ipynb  requirements.txt  temp_tutorial.ipynb
src/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
src/sampling/: halton.py  lhs.py  plhs.py  sobol.py  symlhs.py
src/vars-tool/sampling/: halton.py  lhs.py  plhs.py  sobol_sequence.py  symlhs.py
src/vars-tool/util/: __init__.py
src/varstool/: LICENSE  VARS.py  __init__.py  vars_sa-MacBook Air.py  vars_sa.py  varstool.py
src/varstool/.ipynb_checkpoints/: vars_sa-checkpoint.py
src/varstool/example_models/: __init__.py  sample_funcs.py
src/varstool/funcs/: __init__.py  hbv.py  hbvsask.py  sample_funcs.py
src/varstool/sa/: SA.py  __init__.py  gvars_funcs.py  tsvars_funcs.py  vars_funcs.py
src/varstool/sampling/: __init__.py  g_starvars.py  halton.py  lhs.py  plhs.py  sobol_sequence.py  starvars.py  symlhs.py
src/varstool/sensitivity_analysis/: dvars_funcs.py  gvars_funcs.py  tsgvars_funcs.py  tsvars_funcs.py  vars_funcs.py
src/varstool/util/: __init__.py  sample_funcs.py
tests/notebook/: GVARS.ipynb  TSVARS.ipynb  VARS-functions.ipynb  VARS.ipynb  final.txt  hbv-sask.py  hbv.py  mu_star.csv  pair_df.csv  plhs.ipynb  sobol_sequence.ipynb  star.py  starvars-alternative.ipynb  starvars.ipynb  symlhs.ipynb  test.csv  test2.csv
tests/notebook/.ipynb_checkpoints/: GVARS-checkpoint.ipynb  TSVARS-checkpoint.ipynb  VARS-checkpoint-MacBook Air.ipynb  VARS-checkpoint.ipynb  VARS-functions-checkpoint.ipynb  halton-checkpoint.ipynb  plhs-checkpoint.ipynb  sobol_sequence-checkpoint.ipynb  starvars-alternative-checkpoint.ipynb  starvars-checkpoint.ipynb  symlhs-checkpoint.ipynb
tests/notebook/banff/: Precipitation_Temperature.inp  initial_condition.inp  monthly_data.inp  streamflow.inp
tests/notebook/oldman/: Precipitation_Temperature.inp  initial_condition.inp
tests/notebook_tests/: Book1.csv  GVARS.ipynb  HBV-SASK.ipynb  TSVARS.ipynb  VARS.ipynb  halton.ipynb  lhs.ipynb  non-unimodal.ipynb  sobol_sequence.ipynb  star.py  vars_funcs.py
tests/notebook_tests/.ipynb_checkpoints/: GVARS-checkpoint.ipynb  VARS-checkpoint.ipynb
tests/notebook_tests/oldman/: monthly_data.inp
tutorial/: 6__HBV-SASK__Sensitivity Analysis.ipynb  7__HBV-SASK__Sensitivity Analysis_Time Varying.ipynb  8__HBV-SASK__Sensitivity Analysis_correlated_paramters.ipynb  GVARS-Tutorial.ipynb  QucikStart-Tutorial.ipynb  QuickStart-Tutorial.ipynb  TSVARS-Tutorial.ipynb  Tutorial.ipynb  tutorial-edited.ipynb
tutorial/.ipynb_checkpoints/: GVARS-Tutorial-checkpoint.ipynb  QucikStart-Tutorial-checkpoint.ipynb  QuickStart-Tutorial-checkpoint.ipynb  tutorial-edited-checkpoint.ipynb
tutorials/: 1 - VARS and G-VARS from A to Z on a test function.ipynb  2 - SA of a real-world model.ipynb  3 - SA with with correlated inputs.ipynb  4 - SA with custom multi-variate distributions.ipynb  4 - SA with with correlated inputs.ipynb  4 - Sensitivity Analysis with custom multi-variate distributions.ipynb  4a - custom_distributions.csv  5 - SA in off-line mode with external models.ipynb  5 - Time-Varying and Time-Aggregate VARS.ipynb  5a - Ex2_star_points.csv  6 - Time-Varying and Time-Aggregate G-VARS.ipynb  7 - SA in off-line mode with external models.ipynb  8 - SA of external models with time-series output.ipynb  8 - SA of external models with time-series output_old.ipynb  8a - Ex1_star_points.csv  8a - Ex2_star_points.csv  9 - SA with given-data.ipynb  9a - sample_wavy6D.csv  9b - sample_HBV.csv  Ex1_star_points.csv  Ex1_star_points_with_outputs.csv  Ex2_star_points_with_outputs.csv  hbv.py  saveload.py
tutorials/.ipynb_checkpoints/: 10__Sensitivity Analysis_with VARS and G-VARS-checkpoint.ipynb  6__HBV-SASK__Sensitivity Analysis-checkpoint.ipynb  7__HBV-SASK__Sensitivity Analysis_Time Varying-checkpoint.ipynb  8__HBV-SASK__Sensitivity Analysis_correlated_paramters-checkpoint.ipynb
tutorials/Banff Basin/: initial_condition.inp
tutorials/Oldman Basin/: Precipitation_Temperature.inp
vars-tool/sampling/: slhs.py
varstool/sampling/: halton.py
(+25 files in other folders)
